--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,8 @@ font-display:swap;font-style:normal;font-weight:400;
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
+
 }
 
 body {
@@ -179,7 +181,7 @@ button:hover {cursor: pointer;}
 
 .blu {border-left: 10px solid #3a4172; padding-left: 20px; margin-right: 20px;}
 
-#about_window {width: 80%; max-height: 800px; max-width: 600px; background: #ececec; background-image: url('../src/desktop_items/grid_simple.svg'); }
+#about_window {width: 60%; max-height: 800px;  background: #ececec; background-image: url('../src/desktop_items/grid_simple.svg'); }
 #about_wrapper {justify-content: center; align-items: center; contain: content; width: 100%; height: calc(100% - 30px);}
 #about_content {height: 95%; margin-top: 2.5%; display: flex; scroll-behavior: smooth; flex-wrap: nowrap; overflow-x: auto; width: 100%;}
 .slide {left: 0; padding: 50px 50px 0px 50px; flex: 0 0 auto;  display: inline-block; height: 100%; width: 100%; margin-right: 20px;  max-width: 610px; contain: content; }
@@ -213,11 +215,12 @@ button:hover {cursor: pointer;}
 #finder_filter button:focus {background: #2f335c; color: white;}
 .slide_container {contain: content; content: contain; height: calc(100% - 250px); margin: 50px;}
 .slide_container img {height: 100%;  animation: fade-in .75s cubic-bezier(.39,.575,.565,1.000) both; box-shadow: 5px 5px 5px gray;}
-.slide_image {height: 80%; display: flex; justify-content: center; align-items: center; }
+.slide_image {height:100%; margin-bottom: 10px; display: flex; justify-content: center; align-items: center; }
 
 .finder_carousel{background: #707BA5; box-shadow: 0px -4px 7px gray; border-top: 1px solid #2f335c; width: 100%; height: 100px; position: absolute; bottom: 0; display: flex;  align-items: center; overflow-y: hidden; overflow-x: scroll;}
 .finder_carousel img {height: 80px; border: 1px solid #2f335c; box-shadow: 2px 2px 2px black; background: none; }
 .finder_carousel button {padding: 20px; outline: none; border: none; cursor: pointer; }
+.finder_carousel button:focus {transform: scale(1.3);}
 
 /* .active_carousel_button {transform: scale(1.3);}   */
 .slideshow_btn_left {position: fixed; left: 0; bottom: 50%; height: 105px; z-index: 20; font-size: 72px; cursor: pointer;}
@@ -272,9 +275,14 @@ button:hover {cursor: pointer;}
   .artboard_response_row {display: -ms-flexbox; /* IE10 */ display: flex; -ms-flex-wrap: wrap; /* IE10 */ flex-wrap: wrap; padding: 0 4px;}
   .artboard_response_column {-ms-flex: 50%; /* IE10 */ flex: 50%; max-width: 50%; padding-right: 1%}
   .artboard_response_column img {margin: 2% 2% 0% 0%; vertical-align: middle; width: 100%;}
-  
-  #vans_hide {display: block;}
+
    
+}
+
+@media screen and (max-height: 840px) {
+  .finder_carousel {display: none;}
+  .slide_container {height: 80%; content: contain;}
+
 }
 
 
@@ -287,32 +295,10 @@ button:hover {cursor: pointer;}
 
 }
 
-@media screen and (min-width: 1000px) {
-  .artboard_response_row {display: -ms-flexbox; /* IE10 */ display: flex; -ms-flex-wrap: wrap; /* IE10 */ flex-wrap: wrap; padding: 0 4px;}
-  .artboard_response_column {-ms-flex: 50%; /* IE10 */ flex: 50%; max-width: 50%; padding-right: 1%}
-  .artboard_response_column img {margin: 2% 2% 0% 0%; vertical-align: middle; width: 100%;}
-  
-  #vans_hide {display: block;}
-   
-}
 
-@media screen and (max-width: 650px) {
-  .artboard h1 {line-height: 2.5rem;}
 
-}
+/* animations  */
 
-@media screen and (min-width:600px) {
-  .container {flex-wrap:nowrap;} 
-  
-}
-
-/* for large screens */
-@media all and (min-width: 800px) { 
-    #about_window_content > *{ flex: 1 auto;}  /* We tell both sidebars to share a row */
-    .about_links {text-align:center;}
-    
-    
-}   
 @keyframes typing {from { width: 0;}to {width: 100%;}}
 @-webkit-keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
 
@@ -320,13 +306,13 @@ button:hover {cursor: pointer;}
 @-webkit-keyframes fade-out{0%{opacity:1}100%{opacity:0}}@keyframes fade-out{0%{opacity:1}100%{opacity:0}}
 
 .fade-in{-webkit-animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both;animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both}
-@-webkit-keyframes fade-in{0%{opacity:0}25%{opacity:0.25}50%{opacity:0.5} 75% {opacity:0.75}100%{opacity:1}}@keyframes fade-in{0%{opacity:0}25%{opacity:0.25}50%{opacity:0.5} 75% {opacity:0.75}100%{opacity:1}}
+@-webkit-keyframes fade-in{0%{opacity:0.5}25%{opacity:0.62}50%{opacity:0.74} 75% {opacity:0.86}100%{opacity:1}}@keyframes fade-in{0%{opacity:0.5}25%{opacity:0.62}50%{opacity:0.74} 75% {opacity:0.86}100%{opacity:1}}
 
 
 .fade-out2{-webkit-animation:fade-out2 .25s cubic-bezier(1.000, 0.565, 0.575, 0.39) both; animation:fade-out2 .25s cubic-bezier(1.000, 0.565, 0.575, 0.39) both}
 @-webkit-keyframes fade-out2{0%{opacity:1}25%{opacity:0.8}50%{opacity:0.6}100%{opacity:0.5}}@keyframes fade-out2{0%{opacity:1}25%{opacity:0.8}50%{opacity:0.6}100%{opacity:0.5}}
 
-/* animations  */
+
 
 @keyframes fadeInFromNone {
   0%, 100% {opacity: 1;} 25%, 75% {opacity: 0.5;} 12.5%, 62.5% {opacity: 0.25;} 50% {opacity: 0.1;} 
