--- a/css/index.css
+++ b/css/index.css
@@ -164,7 +164,7 @@ button:hover {cursor: pointer; color:# }
 .tooltip .tooltiptext {visibility: hidden; width: 100%; background-color: #c7ccde; color: #000; text-align: center; padding: 5px; border-radius: 6px; position: absolute; z-index: 1; bottom: 100%; opacity: 0; transition: opacity 0.3s;}
 .tooltip .tooltiptext::after {content: " "; position: absolute; top: 100%; left: 50%; margin-left: -10px; border: 7px solid; border-width: 9px; border-style: solid; border-color: #c7ccde transparent transparent transparent;}
 .tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
-.desktop_icon_container {position: fixed; width: 90%; height: 100%; z-index: 5; opacity: 0;}
+.desktop_icon_container {position: fixed; width: 90%; height: calc(100% - 150px); z-index: 5; opacity: 0;top: 50px;}
 .desktop_icon_container img {max-width: 100px; width: 100%; padding-bottom: 10%;}
 .desktop_icon_container button:hover {transform: rotate(5deg); cursor: pointer;}
 .desktop_icons {position: fixed;}
@@ -200,8 +200,8 @@ button:hover {cursor: pointer; color:# }
 
 /* Window CSS ------------------------------------------------------------------------------------------------------- */
 .window {width: 100%; border: #3A4172 1px solid; border-radius: 5px; top: 60px; height: calc(100% - 180px); background: #c6cadf;  -webkit-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); -moz-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); position: fixed;  z-index: 10;}
-.case .window_closebar {position: absolute;}
-.window_closebar {height: 30px; width: 100%;  top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; overflow-x: hidden; border-bottom: #3A4172 1px solid; text-align: center; position: absolute; z-index: 20; }
+.case .window_closebar {position: sticky; position: -webkit-sticky;}
+.window_closebar {height: 30px; width: 100%; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4;  overflow-x: hidden; border-bottom: #3A4172 1px solid; position: -webkit-sticky; position: sticky; text-align: center; z-index: 20; }
 .window_closebar p {display: inline-block; margin-top: 5px;  color: #c6cadf;}
 .close_btn { height: 20px; left: 10px; top: 5px; position: absolute; } 
 .window_closebar img:hover {cursor: pointer; transform: scale(1.2)}
@@ -209,50 +209,22 @@ button:hover {cursor: pointer; color:# }
 
 /* About Window CSS ---------------------------------------------------------------------------------------------------- */
 
-#about_window {width: 98%; max-width: 1000px; height: 50vh; max-height:740px; background:#ececec}
-.about_menu {width: 100%; bottom: 0px; position: absolute; height: 40px; background: #49588b; display: table; z-index: 10; }
-.about_menu_item {display: table-cell; padding: 10px;   text-align: center;}
-
-
-.about_content {height: calc(100% - 100px); margin-top: 40px;  z-index: 2;  display: flex;  align-items: center; scroll-behavior: smooth;  overflow: hidden; }
-.about_section { width: 100%; height: 100%; overflow-y: hidden;  align-items: center;  }
+#about_window {width: 98%; max-width: 900px;  max-height:450px; background:#ececec; top: 25%;}
+.about_menu {width: 100%; bottom: -10px;  position: absolute;  background: #49588b; height: 40px; z-index: 10; align-items: center; }
+.about_menu button {width: 32%; margin-top: 10px; font-family: 'GreycliffCF-Thin', sans-serif; text-transform: uppercase; font-size: 0.85rem; color: white;}
 #middle_about_menu_item {border: 1px solid white; border-style: none solid none solid;}
+
+
+.about_content { margin-top: 40px; height: calc(90%); z-index: 2;  display: flex;  align-items: center;  overflow-x: hidden;  }
+.about_section { width: 100%; height: 90%;  align-items: center;  }
 #about_window h1 {font-size: 28px !important; font-family: 'GreycliffCF-Bold', sans-serif; line-height: 30px;}
 
 .about_menu_item:hover {transform: scale(1.1);}
-
-.flex-container {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  padding: 0;
-  margin: 0px;
-  list-style: none;
- 
-  
-
- 
-}
-
-.flex-item {
-  
-  
-  width: 40vw;
-  margin: 2vw;
-  min-width: 325px;
-
-  
- 
-}
-.mobile_column {
-  padding-left: 25px;
-}
-
+.about_col_left {width: calc(50% - 100px); height: 90%;  margin: 0px 0px 100px 50px; float: left;  object-fit: contain; }
+.about_col_right {width:calc(50% - 50px); height: 90%;  margin: 0px 25px 50px 0px; float: right; }
 #section2 {text-align: center;}
-.flex-item li { 
-  list-style: none;
-}
-#section3 {margin-top: 100px;}
+#section2 li { list-style: none;}
+
 
 
 
@@ -285,12 +257,13 @@ button:hover {cursor: pointer; color:# }
 
 
 /* Finder Window---------------------------------------------------------------------------------------------------  */
-#instagram_window {max-width:1000px;height:calc(100% - 140px);max-height:1000px;width:100%;object-fit:contain;background:#c6cADF}
+#instagram_window {max-width:982px;height:calc(100%-220px); max-height: 900px; width:100%;object-fit:contain;background:#c6cADF}
 .instagram_tile img{object-fit:cover;height:120px;width:120px;top:0;left:0}
-#photo_viewer{height:calc(100% - 195px);max-height:940px;max-width:980px;width:100%;background:#c6cADF;top:90px;position:fixed;display:flex;justify-content:center}
+#photo_viewer{height:calc(100% - 170px);max-height:890px;max-width:980px;width:100%;top:90px;position:fixed;display:flex;justify-content:center}
 .picture_slide{height:calc(100% - 150px);top:48px;width:90%;margin:40px 0 0 0%;text-align:center}
-.photo_frame img{max-height:700px; height:80%; width:100%; object-fit:cover; margin-bottom:25px; -webkit-box-shadow:25px 6px 35px -28px rgba(0,0,0,.75);-moz-box-shadow:25px 6px 35px -28px rgba(0,0,0,.75);box-shadow:25px 6px 35px -28px rgba(0,0,0,.75)}
-.photo_carousel{width:100%; height:100px; bottom:-20px; background:#fff; position:absolute; display:inline-flex; overflow-x:scroll; overflow-y:hidden; border:5px solid #fff}
+
+.photo_frame img{max-height:600px; height:calc(100% - 100px);  object-fit:cover; margin-bottom:25px; -webkit-box-shadow:25px 6px 35px -28px rgba(0,0,0,.75);-moz-box-shadow:25px 6px 35px -28px rgba(0,0,0,.75);box-shadow:25px 6px 35px -28px rgba(0,0,0,.75)}
+.photo_carousel{width:100%; height:100px; bottom:21px; background:#fff; left: 0; position:absolute; display:inline-flex; overflow-x:scroll; overflow-y:hidden; border:5px solid #fff}
 .photo_carousel .instagram_tile{padding:0 5px}
 
 
@@ -344,6 +317,7 @@ button:hover {cursor: pointer; color:# }
 .artboard{height: 500px; padding: 50px;}
 .case {width: 95%; max-width: 1100px; height: calc(100% - 200px); top: 50px; background-color: #ececec; background-size: contain; overflow: auto;}
 .artboard img {  margin: 0% 1% 1% 0%;}
+.project_h1 {margin-top: 25px;}
 .caption {font-family: 'GreycliffCF-ThinOblique', sans-serif; text-align: center; margin: 1% 0px 100px 0px; font-size: 1rem; }
 .artboard_bottom {margin-top: 100px; margin-bottom: 50px;}
 .artboard_bottom p {text-align: center; padding: 0px 30px 0px 30px} 
@@ -424,9 +398,16 @@ button:hover {cursor: pointer; color:# }
   #photo_viewer{ top: 65px !important;}
   #mobile_wifi {display: block; float: right;}
   .mobile_column {padding-left: 0!important;}
-  #about_window {width: 100%;}
+  #about_window {width: 100%; height: 100%;max-height: calc(100vh - 150px);}
   .about_content {overflow-y: scroll!important;}
-#about_window h1 {font-size: 1.25em !important; line-height: 1em; 
+#about_window h1 {font-size: 1.25em !important; line-height: 1em; }
+  .photo_frame img{max-height:250px;}
+  .photo_carousel {bottom: -5px;}
+  .about_col_left, .about_col_right {width: 90%; margin: 20px 20px 0px 20px; height: auto; overflow-x: hidden; overflow-y: scroll;}
+  .about_col_left img {margin-top: 35px;}
+  .about_section {width: 100%;}
+  .photo_frame img{max-height:700px; height:80%; width:100%; object-fit:cover;}
+  .project_h1 {margin-top: 25px;}
 }
 
 
@@ -459,6 +440,8 @@ button:hover {cursor: pointer; color:# }
 @-webkit-keyframes scale-up-bl{0%{-webkit-transform:scale(.5);transform:scale(.5);-webkit-transform-origin:0 100%;transform-origin:0 100%}100%{-webkit-transform:scale(1);transform:scale(1);-webkit-transform-origin:0 100%;transform-origin:0 100%}}@keyframes scale-up-bl{0%{-webkit-transform:scale(.5);transform:scale(.5);-webkit-transform-origin:0 100%;transform-origin:0 100%}100%{-webkit-transform:scale(1);transform:scale(1);-webkit-transform-origin:0 100%;transform-origin:0 100%}}
 .blink-1{-webkit-animation:blink-1 3s infinite backwards; animation:blink-1 3s infinite backwards}
 @-webkit-keyframes blink-1{0%,50%,100%{opacity:1}25%,75%{opacity:0.25}}@keyframes blink-1{0%,50%,100%{opacity:1}25%,75%{opacity:0.25}}
+.slide-in-fwd-center{-webkit-animation:slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both}
+@-webkit-keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
 /* MOBILE CSS */
 
 
