--- a/css/index.css
+++ b/css/index.css
@@ -32,11 +32,6 @@
   src: url('webFonts/GreycliffCF-Heavy/font.woff2') format('woff2'), url('webFonts/GreycliffCF-Heavy/font.woff') format('woff');
 }
 @font-face {
-  font-family: 'GreycliffCF-Bold';
-  font-display: swap;
-  src: url('webFonts/GreycliffCF-Bold/font.woff2') format('woff2'), url('webFonts/GreycliffCF-Bold/font.woff') format('woff');
-}
-@font-face {
   font-family: 'GreycliffCF-DemiBold';
   font-display: swap;
   src: url('webFonts/GreycliffCF-DemiBold/font.woff2') format('woff2'), url('webFonts/GreycliffCF-DemiBold/font.woff') format('woff');
@@ -217,7 +212,7 @@ button:hover {cursor: pointer; color:# }
 
 .about_content { margin-top: 40px; height: calc(90%); z-index: 2;  display: flex;  align-items: center;  overflow-x: hidden;  }
 .about_section { width: 100%; height: 90%;  align-items: center;  }
-#about_window h1 {font-size: 28px !important; font-family: 'GreycliffCF-Bold', sans-serif; line-height: 30px;}
+#about_window h1 {font-size: 28px !important; font-family: 'GreycliffCF-Heavy', sans-serif; line-height: 30px;}
 
 .about_menu_item:hover {transform: scale(1.1);}
 .about_col_left {width: calc(50% - 100px); height: 90%;  margin: 0px 0px 100px 50px; float: left;  object-fit: contain; }
