--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,14 @@ canvas { width: 100%; height: 100%; display: block; background-color: #2f345a }
   scroll-behavior: smooth;
   margin: 0; 
   padding: 0; 
+
+  
+}
+
+cursor {
+  cursor: url(spinny.svg), auto;
+  -webkit-animation: cursor 400ms infinite;
+  animation:spin 1s linear infinite;
 }
 
 body {
@@ -124,13 +132,13 @@ button:hover {cursor: pointer; color:# }
 .login {width: 100%; height: 100%;  position: fixed; top: 0; display: flex; justify-content: center;	align-items: center;}
 .profile {width: 0%; max-width: 250px; position: absolute; padding-top: 25px; opacity: 1; z-index: 10;}
 .profile_description {width: 90%; max-width: 500px; opacity:1; padding-top: 80px;}
-.spinny {position: fixed; z-index: 7; max-width: 40px; opacity: 0;}
+.spinny {position: fixed; bottom: 20px; left: 48%; z-index: 10000; max-width: 40px; opacity: 1;}
 
 /* Splash Pages CSS ------------------------------------------------------------------------------------ */
  #splash_pages {display: flex; justify-content: center; align-items: center; position: fixed; margin-top: 15vh; height: 70vh; width: 100%;  }
  .splash_page_wrapper {display: flex; justify-content: center; align-items: center; }
  #splash_context_text {width: 95%; max-height: 90vh; position: absolute; animation: rotateStars 15s infinite;}
- .splash_img {background: linear-gradient(0deg, rgba(47,51,92,1) 0%, rgba(198,202,223,1) 100%); max-height: 60vh; max-width: 75vw; margin-top: 2%; opacity: 1; position: absolute;}
+ .splash_img {box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); max-height: 60vh; max-width: 75vw; margin-top: 2%; opacity: 1; position: absolute;}
  .loading_scroller { border: 1px solid #2E345B; opacity: 50%; left: 20%; bottom: 10%; z-index: 200; background: #ededed; height: 25px; max-width: 68%; width: 0%; position: absolute;}
  
  /* Desktop Framework CSS ------------------------------------------------------------------------------- */
@@ -225,7 +233,7 @@ button:hover {cursor: pointer; color:# }
 
 /* Contact Window CSS --------------------------------------------------------------------------------------------------- */
 #contact_window {height: 550px; max-width: 400px; top: 25%; contain: content; overflow: hidden;}
-#contact_window_content {margin-top: 30px;}
+
 #contact_window_content p {padding: 0% 5%; }
 #contact_window_content img {height: 80px; padding-left: 20px; }
 #contact_window_content img:hover {transform: scale(1.1); cursor: alias;}
@@ -243,22 +251,22 @@ button:hover {cursor: pointer; color:# }
 .mobile_icons img {width: 100px; height: auto;}
 
 /* Social Media Link App Icon and window --------------------------------------------------------------------------------------------------- */
-#socials_mobile_window{height:375px; top:25%; padding: 2%; background:none; width:100%; border: none;}
+#socials_mobile_window{height:375px; top:25%; left: 5%; padding: 2%; background:none; width:90%; border: none;}
 #socials_mobile_wrapper{border-radius:5px; border: #3A4172 1px solid; background:rgba(198,202,223,.85);height:100%;width:100%;padding:10px;text-align:center;color:#fff}
-.socials_mobile_container{display:grid;grid-template-columns:auto auto auto;grid-template-rows:100px 100px;justify-content:center;grid-gap:15px}
+.socials_mobile_container{display:grid;grid-template-columns:auto auto auto;grid-template-rows:100px 100px;justify-content:center;grid-gap:15px; margin-top: 25px;}
 .socials_mobile_container>div{text-align:center;height:90px;width:90px;display:flex;object-fit:contain}
 .socials_mobile_container img{height:90px}
 .social_app_label{color:#fff;transform:translate(0,90px);text-align:center;position:absolute;font-family:'GreycliffCF-Regular',sans-serif!important;font-size:14px}
 
 
 /* Finder Window---------------------------------------------------------------------------------------------------  */
-#instagram_window {max-width:982px;height:calc(100%-220px); max-height: 900px; width:100%;object-fit:contain;background:#c6cADF}
-.instagram_tile img{object-fit:cover;height:120px;width:120px;top:0;left:0}
+#instagram_window {max-width:982px;height:calc(100%-220px); max-height: 900px; width:100%;object-fit:contain;background:#c6cADF; top: 50px;}
+.instagram_tile img{object-fit:cover;height:86px;top:0;left:0}
 #photo_viewer{height:calc(100% - 170px);max-height:890px;max-width:980px;width:100%;top:90px;position:fixed;display:flex;justify-content:center}
 .picture_slide{height:calc(100% - 150px);top:48px;width:90%;margin:40px 0 0 0%;text-align:center}
 
-.photo_frame img{max-height:600px; height:calc(100% - 100px);  object-fit:cover; margin-bottom:25px; -webkit-box-shadow:25px 6px 35px -28px rgba(0,0,0,.75);-moz-box-shadow:25px 6px 35px -28px rgba(0,0,0,.75);box-shadow:25px 6px 35px -28px rgba(0,0,0,.75)}
-.photo_carousel{width:100%; height:100px; bottom:21px; background:#fff; left: 0; position:absolute; display:inline-flex; overflow-x:scroll; overflow-y:hidden; border:5px solid #fff}
+.photo_frame img{width: 100%; max-height: 550px; object-fit:cover; margin-bottom:25px; -webkit-box-shadow:25px 6px 35px -28px rgba(0,0,0,.75);-moz-box-shadow:25px 6px 35px -28px rgba(0,0,0,.75);box-shadow:25px 6px 35px -28px rgba(0,0,0,.75)}
+.photo_carousel{width:100%; height:100px; bottom:21px; background:#fff; left: 0; position:absolute; display:inline-flex; scroll-behavior: smooth; overflow-x:scroll; overflow-y:hidden; border:5px solid #fff}
 .photo_carousel .instagram_tile{padding:0 5px}
 
 
@@ -371,6 +379,8 @@ button:hover {cursor: pointer; color:# }
 
 @media screen and (max-width: 500px) {
   /* .page-wrapper {height: 100vh;} */
+  body {overflow-y: hidden; width: 100vw; height: 100vh;}
+  .window {top: 50px; left: 2px; width: 100vw;}
  #logo {max-width: 325px !important; width: 35%;}
   #finder_window {height: calc(100% - 150px);  top: 40px; }
   #finder_carousel {display: none;}
@@ -398,7 +408,7 @@ button:hover {cursor: pointer; color:# }
 #about_window h1 {font-size: 1.25em !important; line-height: 1em; }
   .photo_frame img{max-height:250px;}
   .photo_carousel {bottom: -5px;}
-  .about_col_left, .about_col_right {width: 90%; margin: 20px 20px 0px 20px; height: auto; overflow-x: hidden; overflow-y: scroll;}
+  .about_col_left, .about_col_right {width: 90%; margin: 30px 20px; height: auto; overflow-x: hidden; overflow-y: scroll;}
   .about_col_left img {margin-top: 35px;}
   .about_section {width: 100%;}
   .photo_frame img{max-height:700px; height:80%; width:100%; object-fit:cover;}
@@ -441,6 +451,11 @@ button:hover {cursor: pointer; color:# }
 @-webkit-keyframes slide-in-fwd-bottom{0%{-webkit-transform:translateZ(-1400px) translateY(800px);transform:translateZ(-1400px) translateY(800px);opacity:0}100%{-webkit-transform:translateZ(0) translateY(0);transform:translateZ(0) translateY(0);opacity:1}}@keyframes slide-in-fwd-bottom{0%{-webkit-transform:translateZ(-1400px) translateY(800px);transform:translateZ(-1400px) translateY(800px);opacity:0}100%{-webkit-transform:translateZ(0) translateY(0);transform:translateZ(0) translateY(0);opacity:1}}
 .slide-in-bck-center{-webkit-animation:slide-in-bck-center .7s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-bck-center .7s cubic-bezier(.25,.46,.45,.94) both}
 @-webkit-keyframes slide-in-bck-center{0%{-webkit-transform:translateZ(600px);transform:translateZ(600px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes slide-in-bck-center{0%{-webkit-transform:translateZ(600px);transform:translateZ(600px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+
 /* MOBILE CSS */
 
 
@@ -458,7 +473,7 @@ button:hover {cursor: pointer; color:# }
   
 }
 
-.mobile_homepage_context { width: 100%; height: 70%; margin-top: 130px; display: flex; align-items: center; justify-content: center;}
+.mobile_homepage_context { width: 100%; height: 70%; max-height: 500px; margin-top: 110px; display: flex; align-items: center; justify-content: center;}
 /* .mobile_homepage_context img {max-height: 100%;} */
 
 
