--- a/css/index.css
+++ b/css/index.css
@@ -403,8 +403,8 @@ button:hover {cursor: pointer; color:# }
   #photo_viewer{ top: 65px !important;}
   #mobile_wifi {display: block; float: right;}
   .mobile_column {padding-left: 0!important;}
-  #about_window {width: 100%; height: 100%;max-height: calc(100vh - 150px);}
-  .about_content {overflow-y: scroll!important;}
+  #about_window {width: 100%; height: 100%; max-height: calc(100vh - 150px);}
+  .about_content {overflow-y: scroll!important; margin-bottom: 20px;}
 #about_window h1 {font-size: 1.25em !important; line-height: 1em; }
   .photo_frame img{max-height:250px;}
   .photo_carousel {bottom: -5px;}
@@ -505,7 +505,7 @@ button:hover {cursor: pointer; color:# }
   width: 100%; 
   max-width: 500px;
   background: #2c2c2c; 
-  height: 80px;
+  height: 60px;
   margin: 0px auto;
   bottom: 0;
   
