--- a/css/index.css
+++ b/css/index.css
@@ -335,7 +335,7 @@ button:hover {cursor: pointer; color:# }
 .artboard_columnthird {float: left; right: 0; margin: 0px 25px 50px 0px; width: 100%;}
 .artboard_columntwothird {float: left; right: 0; margin: 0px; width: 100%;}
 .artboard_columnfifty {float: left; right: 0; margin: 0px; width: 100%;}
-.overlap_img { transform: translateX(0px)}
+.overlap_img { transform: translateX(0px); width: 100%!important; }
 #tlgs_section_h3 {margin: 0px 0px 50px 0px}
 #tlgs_section_h3 h3 {margin-top: 25px;}
 .artboard_columnthird p {margin-top: 0px; margin-bottom: 0px;}
@@ -344,6 +344,8 @@ button:hover {cursor: pointer; color:# }
 .wf_poster {display: table-cell; vertical-align: middle; padding-right: 1%;}
 .wf_poster img {max-width: 100%;}
 .wf_tri_poster_container {display: table; width: 100%; white-space: nowrap; height: 100px;}
+
+.tincture {display: none;}
 
 @media screen and (min-width: 1100px ) {
   .artboard_columnthird{ width: 30%; margin-right: 2%; }
@@ -412,7 +414,7 @@ button:hover {cursor: pointer; color:# }
   .about_col_left img {margin-top: 35px;}
   .about_section {width: 100%;}
   .photo_frame img{max-height:700px; height:80%; width:100%; object-fit:cover;}
-  
+  .tincture {display: block;}
 }
 
 
