--- a/css/index.css
+++ b/css/index.css
@@ -179,11 +179,11 @@ button:hover {cursor: pointer; color:# }
 #notification:hover {cursor: pointer;}
 
 #mobile_notification_window {
-  width: 100%; 
+  width: 101%; 
   height: 75px; 
-  top: 40px; 
+  top: 20px;
   z-index: 1000;
-  
+  margin: 0;
   position: fixed;
   animation:slide-in-top 0.75s cubic-bezier(.25,.46,.45,.94) both;
   
@@ -194,7 +194,7 @@ button:hover {cursor: pointer; color:# }
 }
 
 #mobile_notif_close {
-  margin: 25px 0px 25px 0px;
+  margin: 30px 0px 25px 0px;
   width: 20px;
   position: fixed;
 }
@@ -213,7 +213,7 @@ button:hover {cursor: pointer; color:# }
 /* About Window CSS ---------------------------------------------------------------------------------------------------- */
 
 #about_window {width: 98%; max-width: 900px;  max-height:450px; background:#ececec; top: 25%;}
-.about_menu {width: 100%; bottom: -10px;  position: absolute;  background: #49588b; height: 40px; z-index: 10; align-items: center; }
+.about_menu {width: 100%; bottom: 0px;  position: absolute;  background: #49588b; height: 40px; z-index: 10; align-items: center; }
 .about_menu button {width: 32%; margin-top: 10px; font-family: 'GreycliffCF-Thin', sans-serif; text-transform: uppercase; font-size: 0.85rem; color: white;}
 #middle_about_menu_item {border: 1px solid white; border-style: none solid none solid;}
 
@@ -318,7 +318,7 @@ button:hover {cursor: pointer; color:# }
 
 /* Case Studies Window CSS --------------------------------------------------------------------------- */
 .artboard{height: 500px; padding: 50px; }
-.case {width: 95%; max-width: 1100px; height: calc(100% - 200px); top: 50px; background-color: #ececec; background-size: contain; overflow: auto;}
+.case {width: 100%; max-width: 1100px; height: calc(100% - 200px); top: 50px; background-color: #ececec; background-size: contain; overflow: auto;}
 .artboard img {  margin: 0% 1% 1% 0%;}
 
 .caption {font-family: 'GreycliffCF-ThinOblique', sans-serif; text-align: center; margin: 1% 0px 100px 0px; font-size: 1rem; }
@@ -401,14 +401,16 @@ button:hover {cursor: pointer; color:# }
   #about_window h1 {font-size: 18px !important; line-height: 22px;}
   .about_section {margin: 15px; }
   #mobile_dock_container {display: block !important;}
-  .window {top: 40px;}
+  .window {top: 38px;}
   #photo_viewer{ top: 65px !important;}
   #mobile_wifi {display: block; float: right;}
   .mobile_column {padding-left: 0!important;}
   #about_window {width: 100%; height: 100%; max-height: calc(100vh - 150px);}
   .about_content {overflow-y: scroll!important; margin-bottom: 20px;}
 #about_window h1 {font-size: 1.25em !important; line-height: 1em; }
-  .photo_frame img{max-height:250px;}
+
+  .photo_frame {margin-top: 50px;}
+ 
   .photo_carousel {bottom: -5px;}
   .about_col_left, .about_col_right {width: 90%; margin: 0px 20px 20px 20px; height: auto; overflow-x: hidden; overflow-y: scroll;}
   .about_col_left img {margin-top: 35px;}
